--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         ✅ Diagnosis Result: Displays possible conditions based on AI response.
     -->
 
+    <h1>Your AI-powered personal health assistant for real-time symptom analysis and predictive diagnosis. Enter your symptoms,
+    and let our intelligent system provide insights to help you stay informed about your health.</h1>
+
     <form action="" id="symptom-form">
         <label for="first-name" >First Name:</label>
         <input type="text" name="first-name" id="first-name"><br><br>
