--- a/contactUs.html
+++ b/contactUs.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact
+    </title>
+</head>
+<body>
+    
+</body>
+</html>
+
 <form action="" id="symptom-form">
     <label for="first-name">First Name:</label>
     <input type="text" name="first-name" id="first-name"><br><br>
