--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             background-color: #B930FF;
         }
     </style>
+    <link rel="stylesheet" href="index.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <!--
@@ -22,8 +24,40 @@
         ✅ Diagnosis Result: Displays possible conditions based on AI response.
     -->
 
+    <div class="dropDown">
+        <button onclick="myFunction()" class="dropbtn"><i class="bx bx-menu" id="btn"></i></button>
+        <div id="myDropdown" class="dropdown-content">
+            <a href="/anatomy.html"><i class='bx bxs-group'></i>Patient Education</a>
+            <a href="/professional.html"><i class='bx bx-male-female'></i>Professional Training</a>
+            <a href="/Treatment.html"><i class='bx bx-capsule'></i>Treatment Planning</a>
+            <a href="/tools.html"><i class='bx bxs-wrench'></i>Tools & Resources</a>
+            <a href="/contacts.html"><i class='bx bx-phone'></i>Emergency Contacts</a>
+        </div>
+    </div>
+
     <h1>Your AI-powered personal health assistant for real-time symptom analysis and predictive diagnosis. Enter your symptoms,
     and let our intelligent system provide insights to help you stay informed about your health.</h1>
+
+    <script>
+        function myFunction() {
+            document.getElementById("myDropdown").classList.toggle("show");
+        }
+
+        // Close the dropdown menu if the user clicks outside of it
+        window.onclick = function (event) {
+            if (!event.target.matches('.dropbtn')) {
+                var dropdowns = document.getElementsByClassName("dropdown-content");
+                var i;
+                for (i = 0; i < dropdowns.length; i++) {
+                    var openDropdown = dropdowns[i];
+                    if (openDropdown.classList.contains('show')) {
+                        openDropdown.classList.remove('show');
+                    }
+                }
+            }
+        }
+
+    </script>
 
     
     
