More changes later

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <a href="/contactUs.html"><i class='bx bxs-group'></i>Patient Information</a>
             <a href="/professional.html"><i class='bx bx-male-female'></i>Professional Training</a>
             <a href="/Treatment.html"><i class='bx bx-capsule'></i>Treatment Planning</a>
-            <a href="/tools.html"><i class='bx bxs-wrench'></i>Tools & Resources</a>
-            <a href="/contacts.html"><i class='bx bx-phone'></i>Emergency Contacts</a>
+            <a href="/Resources.html"><i class='bx bxs-wrench'></i>Tools & Resources</a>
+            <a href="/emergency.html"><i class='bx bx-phone'></i>Emergency Contacts</a>
         </div>
     </div>
 
