--- a/emergency.html
+++ b/emergency.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emergency</title>
+    <link rel="stylesheet" href="emergency.css">
 </head>
 <body>
     <div class="all">
