--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p><b>Disclaimer:</b>
                 <i>HealthCheck AI is an AI-powered tool designed to provide general health insights based on user-inputted symptoms. It is
                 not a substitute for professional medical advice, diagnosis, or treatment. Always consult a qualified healthcare
-                provider for medical concerns. We do not store or share personal health data.</i></p>
+                provider for medical concerns. <!--We do not store or share personal health data.--></i></p>
             </footer>
         </div>
     </div>
