--- a/contactUs.html
+++ b/contactUs.html
@@ -3,32 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact
-    </title>
+    <title>Contact</title>
+    <link rel="stylesheet" href="contactUs.css">
 </head>
 <body>
     
 </body>
 </html>
 
-<form action="" id="symptom-form">
-    <label for="first-name">First Name:</label>
+
+
+<div class="form">
+    <form action="" id="symptom-form">
+    <label for="first-name">First Name:</label><br>
     <input type="text" name="first-name" id="first-name"><br><br>
-    <label for="last-name">Last Name:</label>
+    <label for="last-name">Last Name:</label><br>
     <input type="text" name="last-name" id="last-name"><br><br>
-    <label for="age">Age</label>
+    <label for="age">Age</label><br>
     <input type="number" id="age" name="age"><br><br>
-    <label for="sex">Sex</label>
+    <label for="sex">Sex</label><br>
     <input list="sex-options" id="sex" name="sex">
     <datalist id="sex-options">
         <option value="Female">Female</option>
         <option value="Male">Male</option>
     </datalist><br><br>
-    <label for="symptoms">Describe your symptoms:</label>
+    <label for="symptoms">Describe your symptoms:</label><br>
     <textarea name="symptoms" id="symptoms" required></textarea><br><br>
     <input type="submit" value="submit">
     <input type="reset" value="reset">
-</form>
+    </form>
+</div>
+
+
 
 <p id="loading">Processing...</p>
 <p><strong>Diagnosis:</strong><span id="response"></span></p>
